# mwmr2024

./: .gitignore  README .md  README.md
hardware/firmware/: platformio.ini
hardware/firmware/include/: config.h
hardware/firmware/lib/encoder/: encoder.cpp  encoder.h
hardware/firmware/lib/motor/: motor.cpp  motor.h
hardware/firmware/src/: main.cpp
hardware/firmware/src/controller_keyboard/: package.xml
hardware/firmware/src/controller_keyboard/src/launch/: keyboard_control.launch
hardware/firmware/src/controller_keyboard/src/scripts/: kinematics.py  teleop.py
hardware/firmware/src/test_pid/: package.xml
hardware/firmware/test/: autonomous_fuzy.py
scripts/: kinematics.py
software/src/controller_keyboard/: CMakeLists.txt
software/src/maps/: hector3_map.yaml  hector4_map.yaml  hector_map1.yaml  office2.pgm  office2.yaml
software/src/nav_mwmr/: CMakeLists.txt  package.xml  sonar_gmapping.rviz
software/src/nav_mwmr/include/: costmap_common_params_ultrasonic.yaml  global_costmap_params.yaml
software/src/nav_mwmr/launch/: amcl.launch  move_base_mecanum.launch  navigation.launch  sonar_gmapping.launch
software/src/nav_mwmr/maps/: hector_map2.yaml
software/src/nav_mwmr/rviz/: robot_navigation.rviz
software/src/navigation/: package.xml
software/src/ps4_controller/: CMakeLists.txt  package.xml
software/src/test_movemotor/: CMakeLists.txt  package.xml
software/src/test_movemotor/src/launch/: move_motor.launch
software/src/test_pid/: CMakeLists.txt
software/src/trajectory_plot/: CMakeLists.txt  package.xml
(+25 files in other folders)
