<?xml version="1.0"?>
<package format="2">
  <name>controller_keyboard</name>
  <version>0.0.0</version>
  <description>The controller_keyboard package</description> 
  <author email="rafiqkizars21@gmail.com">Jane Doe</author>
  <maintainer email="rafiq@todo.todo">rafiq</maintainer>
  <license>TODO</license>



  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
 
  </export>
</package>
